# fp-in-aviation

./: fp-in-aviation.md
code/: .ghci  changelog.md
code/adsb/: README.md  adsb.cabal  adsb.nix  default.nix  fp-in-aviation.cabal
code/adsb/src/Data/Aviation/Stratux/: Demo.hs
code/c172-wb/: LICENSE  README.md  c172-wb.cabal  c172-wb.nix  default.nix
code/c172-wb/src/: Main.hs
code/c172-wb/src/Data/Aviation/: Preflight.hs
code/etc/: todo
code/lens/: Logbook.java
code/src/Data/Aviation/Stratux/: Demo.hs
etc/: TODO  prep-check-list.md
slides/: adsb.tex  avionics.tex  efb.tex  fp-in-aviation.tex  introduction.tex  logbook.tex  more-stories.tex  qfpl.tex  regulation.tex  title.tex  weight-and-balance.tex
slides/dia/: adsb-networking.dia  adsb-networking.dia~
slides/image/: logbook-extra
