name:               fp-in-aviation
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2016 Tony Morris
synopsis:           A demonstration of the stratux library.
category:           Aviation, ADSB, Stratux
description:        A demonstration of the stratux library <http://stratux.me/>
homepage:           https://github.com/tonymorris/fp-in-aviation
bug-reports:        https://github.com/tonymorris/fp-in-aviation/issues
cabal-version:      >= 1.10
build-type:         Custom
source-repository   head
  type:             git
  location:         git@github.com:tonymorris/fp-in-aviation.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 4
                    , stratux == 0.0.9
                    , network-uri
                    , either
                    , lens
                    , transformers
                    , text
                    , time

  ghc-options:
                    -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Stratux.Demo

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
